--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ add_executable(nr-gnb src/gnb.cpp)
 
 target_link_libraries(nr-gnb pthread)
 
-target_compile_options(nr-gnb PRIVATE -Wall -Wextra -pedantic)
+target_compile_options(nr-gnb PRIVATE -Wall -Wextra -pedantic -lcurl)
 
 target_link_libraries(nr-gnb asn-rrc)
 target_link_libraries(nr-gnb asn-ngap)
