--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,6 @@ set(CMAKE_C_STANDARD 11)
 include_directories(src)
 
 find_package(CURL REQUIRED)
-include_directories(${CURL_INCLUDE_DIR})
 
 #################### SUB DIRECTORIES ####################
 
@@ -25,9 +24,9 @@ add_subdirectory(src/ue)
 add_executable(nr-gnb src/gnb.cpp)
 
 target_link_libraries(nr-gnb pthread)
+target_link_libraries(nr-gnb CURL::libcurl)
 
 target_compile_options(nr-gnb PRIVATE -Wall -Wextra -pedantic -lcurl)
-target_link_libraries(nr-gnb ${CURL_LIBRARIES})
 target_link_libraries(nr-gnb asn-rrc)
 target_link_libraries(nr-gnb asn-ngap)
 target_link_libraries(nr-gnb common-lib)
